# booking-agoda-hotel-scraper

./: README.md  docker-compose.yml  pyproject.toml  remove_pycache.sh
django-project/: pyproject.toml  test_celery_get_task_results.py  test_celery_result.py
django-project/django_project/: celery.py  settings.py  urls.py
django-project/hotel_search/: city_id_resolver.py  forms.py  models.py  tasks.py  urls.py  views.py
django-project/hotel_search/migrations/: 0001_initial.py
django-project/hotel_search/static/js/: poll.js
django-project/hotel_search/templates/: base.html
django-project/hotel_search/templates/hotels/: bookmarks.html  results.html  search.html
django-project/hotel_search/templates/registration/: login.html  register.html
scraper/: test_agoda_redirect_url_city_id.py
scraper/scraper/: items.py  pipelines.py  settings.py
scraper/scraper/spiders/: agoda_spider.py  booking_spider.py
