[project]
name = "django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "crispy-tailwind>=1.0.3",
    "django>=5.2.4",
    "django-crispy-forms>=2.4",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "redis==4.3.4",
    "requests>=2.32.4",
    "scrapy>=2.13.3",
    "scrapy-crawlbase-middleware>=1.0.0",
    "scrapy-playwright>=0.0.43",
]
